src/pages/BlogDetails/BlogDetails.scss
@import "../../styles/styles.scss";

.wrapper {

    margin-top: 125px;

    @include minMedium {

        display: grid;
        grid-template-columns: 1fr 3fr;   
        grid-template-rows: min-content; 

    }
    
}

.article {

    padding: 0 1rem;

    @include minMedium {
    
        grid-column: 2;

    }

    &_info {
        
        padding: 0 1rem;
        display: grid;
        grid-auto-rows: min-content;
        margin-top: 80px;

        @include minMedium {

            grid-column: 2;
            margin-top: 0;

        }

        &__title {

            font-size: rem(36);

        }

        &__date {

            color: $color_main__blue;

        }

        &__img {

            margin: 35px 0;
            width: 100%;
            border-radius: 20px;
            max-height: 600px;

        }

    }

    &__video {

        width: 100%;
        border-radius: 20px;

    }

    &__snippet {
        
        margin: 30px 0;

        &:nth-child(1) {
            
            @include minLarge {

                margin: 0 0 30px 0;

            }
            
        }

    }

}



.author {

    border-radius: 20px;
    margin: 0 1rem;
    display: flex;
    align-items: center;
    height: 86px;
    background-color: #F6F6F6;

    @include minMedium {

        grid-column: 1;
        grid-row: 1 / 3;

    }

    &__wrapper {

        display: flex;
        width: 100%;
        height: 50px;
        padding: 0 10px;

    }

    &__photo {

        width: 50px;
        height: 50px;
        margin-right: 10px;
        border-radius: 50%;

    }

    &__info {

        display: flex;
        flex-direction: column;
        justify-content: space-evenly;

    }

    &__name {

        font-size: rem(14);
        font-weight: bold;

    }

    &__title {

        font-size: rem(14);
        
    }

}

.quote {
    
    display: flex;
    background-color: #E1EDF9;
    position: relative;
    padding: 10px;
    border-radius: 20px;

    &__sign {

        align-self: flex-start;
        margin-right: 10px;
        object-fit: contain;
        background-size: contain;
        background-repeat: no-repeat;

    }

    &__text {

        &::before {

            content: url("../../assets/images/“.png");
            margin-right: 10px;
            display: block;
            position: absolute;
            top: 25px;
            left: 20px;

        }

    }

}


.hr {

    height: 1px;
    background-color: #BACCDE;
    border: none;
    margin-bottom: 30px;

    @include minMedium {

            display: none;

    }

}

.recommended {

    margin-bottom: 50px;
    padding: 0 1rem;
    
    @include minMedium {
    
        grid-column: 1;
        grid-row: 1 / 3;
        margin: 300px 0 0 0;    

    }

    @include minLarge {

        margin: 240px 0 0 0;

    }

    &__title {
        
        margin: 24px 0;
        color: #7D8893; 

        &::before {
            
            content: "In This Case Study"
        
        }

        &::before {

            @include minMedium {

                content: "Recommended"

            }

        }

    }

    &_container {
     
        display: grid;
        row-gap: 50px;
        margin-top: 24px;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
        column-gap: 12px;

    }

    &__article {

        &:nth-child(1) {

            @include minMedium {

                grid-column: span 2;

            }
        
        }
        
        &:nth-last-child(1) {
        
            @include minMedium {
    
                display: none;
    
            }
    
        }

    }
}

.blogs {

    display: none;

    @include minLarge {

        margin-top: 100px;
        display: block;

    }
}

.footer_triangle {

    margin-top: 100px;

    @include minLarge {

        display: none;

    }

}

